# FFmpegSample

./: README.md  git-shell.sh
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/android/ffmpeg/vv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_android_ffmpeg_vv_MainActivity.h  ffmpeg_helloworld.c
app/src/main/java/com/android/ffmpeg/vv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/android/ffmpeg/vv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
